Libraries/GTK/src/gtkextra/gtkplot3d.h

typedef struct _GtkPlot3D		GtkPlot3D;
void 		gtk_plot3d_set_yrange		(GtkPlot3D *plot,
						 gdouble min, gdouble max);
void 		gtk_plot3d_set_zrange		(GtkPlot3D *plot,
						 gdouble min, gdouble max);
void 		gtk_plot3d_set_yfactor		(GtkPlot3D *plot,
						 gdouble yfactor);
void 		gtk_plot3d_set_zfactor		(GtkPlot3D *plot,
						 gdouble zfactor);
void		gtk_plot3d_set_scale		(GtkPlot3D *plot,
						 GtkPlotOrientation axis,
						 GtkPlotScale scale);
GtkPlotScale	gtk_plot3d_get_scale		(GtkPlot3D *plot,
						 GtkPlotOrientation axis);