Libraries/GTK/src/gtk-extra-plot_3d.adb


   procedure Set_Yfactor (Plot : access Gtk_Plot_3D_Record; Yfactor : Gdouble)
   is
      procedure Internal (Plot : System.Address; Yfactor : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_set_yfactor");
   begin
      Internal (Get_Object (Plot), Yfactor);
   end Set_Yfactor;

   ----------------
   -- Set_Yrange --
   ----------------

   procedure Set_Yrange (Plot : access Gtk_Plot_3D_Record; Min, Max : Gdouble)
   is
      procedure Internal (Plot : System.Address; Min, Max  : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_set_yrange");
   begin
      Internal (Get_Object (Plot), Min,  Max);
   end Set_Yrange;

   -----------------
   -- Set_Zfactor --
   -----------------

   procedure Set_Zfactor (Plot : access Gtk_Plot_3D_Record; Zfactor : Gdouble)
   is
      procedure Internal (Plot : System.Address; Zfactor : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_set_zfactor");
   begin
      Internal (Get_Object (Plot), Zfactor);
   end Set_Zfactor;

   ----------------
   -- Set_Zrange --
   ----------------

   procedure Set_Zrange (Plot : access Gtk_Plot_3D_Record; Min, Max : Gdouble)
   is
      procedure Internal (Plot : System.Address; Min, Max  : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_set_zrange");
   begin
      Internal (Get_Object (Plot), Min,  Max);
   end Set_Zrange;

   ---------------
   -- Set_Scale --
   ---------------

   procedure Set_Scale
     (Plot  : access Gtk_Plot_3D_Record;
      Axis  : Plot_Orientation;
      Scale : Plot_Scale)
   is
      procedure Internal
        (Plot  : System.Address;
         Axis  : Plot_Orientation;
         Scale : Plot_Scale);
      pragma Import (C, Internal, "gtk_plot3d_set_scale");
   begin
      Internal (Get_Object (Plot), Axis, Scale);
   end Set_Scale;

   ---------------
   -- Get_Scale --
   ---------------

   function Get_Scale
     (Plot  : access Gtk_Plot_3D_Record;
      Axis  : Gtk.Extra.Plot.Plot_Orientation)
      return Plot_Scale
   is
      function Internal
        (Plot : System.Address; Axis : Plot_Orientation)
         return Plot_Scale;
      pragma Import (C, Internal, "gtk_plot3d_get_scale");
   begin
      return Internal (Get_Object (Plot), Axis);
   end Get_Scale;

end Gtk.Extra.Plot_3D;
